--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
@@ -29,7 +34,7 @@
                <a class="nav-link" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PORTFOLIO</a>
+                <a class="nav-link" href="#">ABOUT</a>
               </li>
               <li class="nav-item">
                <a class="nav-link" href="#">CONTACT</a>
@@ -38,9 +43,41 @@
           </div>
         </nav>
       </div>
-  </header>  
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </header>
+  <section class="home">
+    <div class="container_box">
+      <div class="row">
+        <div class="media">
+         <div class="media-body">
+           <div class="personal_text">
+             <h5>Hi everyone, I'm</h5>
+             <h2>KATYA KRASOVSKA</h2>
+             <h4>Junior developer</h4> 
+           </div>
+         </div>
+        </div>
+      </div>
+      <dl class="basic_info">
+        <dt>
+          <a href="https://icons8.com/icon/43503/календарь"></a>
+           <img src="https://img.icons8.com/small/16/000000/calendar.png"/>
+           15th October, 2004
+          </a>
+        </dt>
+        <dt>
+          <a href="https://icons8.com/icon/43846/телефон"></a>
+            <img src="https://img.icons8.com/small/16/000000/phone.png"/>
+            +380502622434d
+          </a>
+        </dt>
+        <dt>
+          <a href="https://icons8.com/icon/65753/пряничный-домик"></a>
+          <img src="https://img.icons8.com/small/16/000000/gingerbread-house.png"/>
+          Sarny, Ukraine
+        </dt>
+      </ul>
+    </div>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
