--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     <div class="container_box">
       <div class="row">
         <div class="media">
-         <div class="media-body">
-           <div class="personal_text">
+          <div class="avatar">
+              <img src="photo.jpg">
+          </div>
+        </div>
+        <div class="media-body">
+            <div class="personal_text">
              <h5>Hi everyone, I'm</h5>
              <h2>KATYA KRASOVSKA</h2>
              <h4>Junior developer</h4> 
-           </div>
-         </div>
-        </div>
-      </div>
-      <dl class="basic_info">
+             <dl class="basic_info">
         <dt>
           <a href="https://icons8.com/icon/43503/календарь"></a>
            <img src="https://img.icons8.com/small/16/000000/calendar.png"/>
@@ -67,7 +67,7 @@
         <dt>
           <a href="https://icons8.com/icon/43846/телефон"></a>
             <img src="https://img.icons8.com/small/16/000000/phone.png"/>
-            +380502622434d
+            +380994865611
           </a>
         </dt>
         <dt>
@@ -75,7 +75,10 @@
           <img src="https://img.icons8.com/small/16/000000/gingerbread-house.png"/>
           Sarny, Ukraine
         </dt>
-      </ul>
+             </dl> 
+            </div>
+        </div>
+      </div>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
